tests/baselines/reference/parserMemberAccessorDeclaration14.errors.txt
parserMemberAccessorDeclaration14.ts(2,8): error TS1049: A 'set' accessor must have exactly one parameter.


==== parserMemberAccessorDeclaration14.ts (1 errors) ====
    class C {
       set Foo(a: number, b: number) { }
           ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
    }